src/index.scss
$header-height-padded: 59px;
$footer-height-padded: 32px;
$filter-height: 37px;
$filter-min-width: 195px;
$packages-filter-controls-sm-height: 186px;
$packages-filter-controls-md-height: 86px;
$packages-submit-footer-height: 87px;

$footer-color: #283C5E;

#form-footer {
	background: #CCCCCC;
	justify-content: center;
}

.ant-form-item-label {
	label {
		margin-bottom: 0rem !important;
	}
	label:after {
		margin: 0 4px 0 2px;
	}
}

body {
	margin-top: $header-height-padded;

	/** Windows fix: Bootstrap 4 scrollbar disappears when modal shows */
	padding-right: 0px !important;
}

body.modal-open {
	overflow-y: auto;
}

#root {
	margin-bottom: $footer-height-padded;
}

#footer {
	background: $footer-color;
}

a {
	cursor: pointer;
}

.ant-select {
	width: 100%;
}

#dynamicUploadForm {

	.submitterInfo {
		min-height: 0px;
		padding-bottom: 15px;
	}

	padding-bottom: $packages-submit-footer-height;

	div[class^='col-md-'], div[class^='col-lg-'],div[class^='col-xl-'], div[class^='col-sm-']  {
		min-height: 86px;
	}
	
	.textArea {
		min-height: 115px;
	}
	
	textarea.ant-input {
		margin-top: 4px;
	}
}

.noResults {
	margin-top: 10px;
}

.attachmentsModalBody {
	padding-top: 0px;
	padding-right: 15px;
	padding-left: 15px;
	padding-bottom: 5px;

	.attachmentsModalRow {
		border-bottom: 1px solid #e5e5e5;
		padding-top: 15px;
		padding-bottom: 15px;
		word-wrap: break-word;
		
		.filename {
			overflow: hidden;
			position: relative;
			line-height: 1.2em;
			margin-right: 0em;
			padding-right: 1em;
		}
		
	}
	.grayRow {
		background-color: rgba(242, 242, 242, 1);
		.filename:after {
			background: rgba(242, 242, 242, 1);
		}
	}
		
}

.metadataModalBody {
	ul {
		list-style: none;
		margin-bottom: 10px;
	}
	li {
		margin-bottom: 10px;
	}
}

/*
::::::::::::::::::::::::::::::::::::::::::::::::::::
PACKAGES
*/
#packages-pane {
	/* xs to sm */
	padding-top: $packages-filter-controls-sm-height;

	/* md and up */
	@media (min-width: 768px) {
		padding-top: $packages-filter-controls-md-height;
	}

	#packages-filter-controls {
		background-color: white;
		border: solid #e7e7e7;
		border-width: 1px 0;

		/* xs to sm */
		height: $packages-filter-controls-sm-height;
		i {
			font-size: x-small;
		}

		/* md and up */
		@media (min-width: 768px) {
			height: $packages-filter-controls-md-height;
			i {
				font-size: small;
			}
		}

		.filter {
			width: 100%;
			min-width: $filter-min-width;
			height: $filter-height;
			display: inline-table;

			.filter-control {
				height: $filter-height;
			}
		}
	}

	#packages-list {
		.bg-light {
			background-color: rgb(230, 241, 255) !important;
		}

		color: var(--dark);

		.packages-querying {
			color: var(--gray);
		}

		.package {
			width: 100%;
		}
	}

	#packages-button-add-new {
		/* xs to sm */
		width: 100%;

		/* md and up */
		@media (min-width: 768px) {
			width: auto;
		}
	}
}

.search-glass {
    background: rgb(2, 117, 216);
    color: white;
}

.dd-gray-text {
    color: gray;
}

.upload-ctrl-submit {
	padding-top: 10px;
    float: right;
}

#upload-form-default {
    text-align: center;
    div {
        b {
            color: gray;
        }
    }
}

#navbar {
    background-color: white;
	border-bottom: 1px solid #e7e7e7;

	.navbar-brand img.logo {
		width: 80px;
		min-width: 80px;
	}
}

.fixed-top-subnav {
	/* to avoid clash with #navbar */
	position: fixed;
	top: $header-height-padded;
	right: 0;
	left: 0;
	z-index: 1029; // This is 1030 - 1, just under the Bootstrap 4 z index for dropdowns
}

.btn-primary {
    background-color: rgb(2, 117, 216);
}

.navbar-default .btn-link {
    color: rgb(2, 117, 216);
}

.dropzone {
	padding-bottom: 15px;
	
	.react-fine-uploader-gallery-dropzone, .react-fine-uploader-gallery-nodrop-container {
		min-height: 120px;
		border: 1px dashed darkgrey;
	}

	.react-fine-uploader-gallery-file-input-container {
		background-color: #0275d8;
		border: 1px solid #0275d8;
	}

	.react-fine-uploader-gallery-file-input-container:hover {
		background-color: #286090;
		border: 1px solid #204d74;
	}
	.react-fine-uploader-gallery-retry-button {
		display: none;
	}
	.react-fine-uploader-gallery-pause-resume-button {
		display: none;
	}
	.react-fine-uploader-gallery-cancel-button {
		&.cancel-disabled {
			display: none;
		}
	}
}

#upload-ctrl {
	.formError {
		color: red;
	}

	.form-control {
		height: 38px;
	}

}

#uploadInfo {
	.formError {
		color: red;
	}
	
	.fieldInError {
		border: 1px solid red !important;
	}
	
	textarea {
		width: 100%;
		height: 65px;
	}

	.packageTypeSelect {
		width: 250px;
	}
	
	.form-control {
		height: 38px;
	}

	.form-control:focus, textarea:focus {
		box-shadow: none;
		border: 2px solid rgb(38,132, 255);
	}

	#packageInformationSection {
		padding-top: 15px;
	}

}

#uploadForm {
	#upload {
		display: none;
	}
}

#uploadPackageInfoForm {
	*[class*='col-'] {
		padding-left: 0px;
		padding-right: 0px;
	}

	.secondField {
		padding-left: 15px !important;
	}

	.uploadFormSubmit {
		width: 150px;
		margin-bottom: 15px;
	}

}

.react-fine-uploader-gallery-file  {
	margin-top: 30px !important;
}

#oops-content {

	margin-top: 150px;

	.oops-big {
		font-size: 72px;
	}

	.oops-small {
		font-size: 32px;
	}

	#oops-image {
		width: 385px;
		height: 330px;
	}
}


.ant-form-item {
	margin-bottom: 0px !important;

	.ant-form-item-label {
		line-height: unset !important;
		font-size: 14px;

		label {
			margin-bottom: 0 !important;
			font-weight: 500;
		}

		label::after {
			display: none !important;
			content: "" !important;
		}

		label.ant-form-item-required::before {
			display: none !important;
			content: "" !important;
		}

		label.ant-form-item-required::after {
			display: inline-block !important;
			margin-right: 4px;
			color: #f5222d;
			font-family: SimSun,sans-serif;
			line-height: 1;
			content: "*" !important;
		}
	}
}

/*
::::::::::::::::::::::::::::::::::::::::::::::::::::
Bootstrap 4 breakpoints

https://bootstrapcreative.com/bootstrap-4-media-queries/
*/

/*
Extra small devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap because it is "mobile first"
*/


/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {

}

/* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
@media (min-width: 768px) {

}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {

}

/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

}

